--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+
+h1 {
+
+    text-align: center;
+    font-size: 50px;
+    text-transform: uppercase;
+    margin-top: 4%;
+    margin-bottom: 4%;
+    letter-spacing: 3px;
+    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+}
 .cards {
     display: flex;
     flex-wrap: wrap;
