--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
 h1 {
-
     text-align: center;
     font-size: 50px;
     text-transform: uppercase;
@@ -12,38 +15,41 @@ h1 {
 .cards {
     display: flex;
     flex-wrap: wrap;
-   justify-content: flex-start; 
+    justify-content: flex-start; 
     flex-direction: row;
-    width: 90%;
+    width: 1000px;
     margin: 10px auto;
-    
-
 }
 .product {
-   width: 28%;
+    width: 31%;
     border:1px black solid;
-    margin-bottom: 40px;
- padding: 1%;
- border-radius: 5px;
- margin-right: 2%;
- box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    padding: 1%;
+    border-radius: 5px;
+    margin-right: 3%;
+    box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.1);
 }
+.product:nth-of-type(3n) { margin-right: 0%;}
 img {
     width: 80%;
     height: 300px;
-  display: block;
-  margin: 5px auto;
-
+    display: block;
+    margin: 5px auto 20px;
 }
 h2 {
-margin-bottom: 5px;
-text-align: center;
-font-size: 28px;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 20px;
+    height: 90px;
 }
 p {
- margin-bottom: 40px;
- line-height: 25px;
- text-align: left;
+    margin-bottom: 40px;
+    line-height: 25px;
+    text-align: left;
+    height: 200px;
+    padding: 0px 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .price{
     display: block;
@@ -53,17 +59,34 @@ p {
 }
 button {
     display: block;
-margin: auto;
-background-color: transparent;
-padding: 5px 10px;
-border-radius: 5px;
-color: blue;
-border: 1px blue solid;
-font-size: 20px;
-transition: all 0.3s ease-in-out;
+    margin: auto;
+    background-color: transparent;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: blue;
+    border: 1px blue solid;
+    font-size: 20px;
+    transition: all 0.5s ease-in-out;
+    margin-bottom: 20px;
 }
 button:hover {
     color: white;
     background-color: blue;
-   
+}
+@media screen and (max-width: 768px) {
+    h1 {font-size: 40px;}
+    .cards{flex-direction: column;width: 300px;}
+    .product { width: 100%; margin-bottom: 20px;}
+    h2 { font-size: 18px;height: 70px;}
+    p{  margin-bottom: 20px;}
+    button{margin-bottom: 20px;}
+}
+@media screen and  (min-width: 769px) and (max-width: 1023px) {
+    h1 {font-size: 40px;}
+    .cards{ width: 700px;}
+    .product { width: 47%;margin-bottom: 20px;}
+    .product:nth-of-type(3n) { margin-right: 3%;} 
+    h2 { font-size: 18px;}
+    p{  margin-bottom: 20px;}
+    button{margin-bottom: 20px;}
 }
